More Responsive mobile design

--- a/stories.html
+++ b/stories.html
@@ -148,7 +148,7 @@
                             <p>I left Unity for 4 years. Came back each year just to try making something, but kept leaving each time.</p>
                             <p>Unity helped me get into the basics of C#, which "ignited" the programming desire. I started online courses to learn more about C# and it became my favorite language, as it is so beginner friendly and a good base for most languages.<br></p>
                             <p>When I turned 18, I began working on mobile games. Most of these games are gone, since they are not that developed to keep them somewhere and I abandoned them. One clicker game only remained in the shadows of Github, kept as private for now. Because I plan on finishing it someday. Later same year I started working on 2d speed typing game with my cousin. I helped him get more into Unity, since I already had some experience. This game is my latest and I plan on releasing it. Hopefully this year.</p>
-                            <figure class="figure d-block"><img class="figure-img" src="https://miro.medium.com/max/1400/1*uQ_JrkJxcK3GKsz4bfpETQ.jpeg" style="height: 404.575px;border-radius: 10px;">
+                            <figure class="figure d-block"><img class="figure-img" src="https://miro.medium.com/max/1400/1*uQ_JrkJxcK3GKsz4bfpETQ.jpeg" style="height: auto;border-radius: 10px;">
                                 <figcaption class="figure-caption">Thank you Unity and Brackeys on YouTube. You sparked that fire &lt;3</figcaption>
                             </figure>
                         </div>
