--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
 <body style="background: rgb(246,246,246);">
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="filter: contrast(200%);">
-        <div class="container"><a class="navbar-brand logo" href="#">Brand</a>
+        <div class="container"><a class="navbar-brand logo" href="https://github.com/PetarWho">P. Penev</a>
             <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark clean-navbar">
-                <div class="container"><a class="navbar-brand logo" href="https://github.com/PetarWho">gh/PetarWho</a><button data-bs-toggle="collapse" data-bs-target="#navcol-1" class="navbar-toggler"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                <div class="container"><a class="navbar-brand logo" href="https://github.com/PetarWho">P. Penev</a><button data-bs-toggle="collapse" data-bs-target="#navcol-1" class="navbar-toggler"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item item"><a class="nav-link active" href="/">HOME</a></li>
