Added new Project
Also fixed navigation

--- a/projects.html
+++ b/projects.html
@@ -34,9 +34,9 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="filter: contrast(200%);">
-        <div class="container"><a class="navbar-brand logo" href="#">Brand</a>
+        <div class="container"><a class="navbar-brand logo" href="https://github.com/PetarWho" target="_blank">P. Penev</a>
             <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark clean-navbar">
-                <div class="container"><a class="navbar-brand logo" href="https://github.com/PetarWho">P. Penev</a><button data-bs-toggle="collapse" data-bs-target="#navcol-1" class="navbar-toggler"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                <div class="container"><a class="navbar-brand logo" href="https://github.com/PetarWho" target="_blank">P. Penev</a><button data-bs-toggle="collapse" data-bs-target="#navcol-1" class="navbar-toggler"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item item"><a class="nav-link" href="/">HOME</a></li>
@@ -152,6 +152,10 @@
                     <div class="col-sm-6 col-md-4 item"><i class="fas fa-cube icon"></i>
                         <h3 class="name">Blender Projects</h3>
                         <p class="description">From cubes to bottles to cars to racetracks. Blender is my favorite 3d modeling software. I've made couple of models there and I can't say I'm an expert. More like beginner\intermediate. As it is so hard to master. I praise all the people that have mastered it. They are pure legends. &lt;3</p>
+                    </div>
+                    <div class="col-sm-6 col-md-4 item"><i class="fab fa-wpforms icon"></i>
+                        <h3 class="name">FileRevamp</h3>
+                        <p class="description">FileRevamp is a simple app built in Windows Forms, that provides an easy way to manipulate file settings, such as name, extension, creation date, etc. Accepts all file types (images, text, video, audio) It works with single file or many files at once.&nbsp; Download link can be found on my Github.</p>
                     </div>
                 </div>
             </div>
