--- a/backup2/projects.html
+++ b/backup2/projects.html
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="filter: contrast(200%);">
         <div class="container"><a class="navbar-brand logo" href="#">Brand</a>
             <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark clean-navbar">
-                <div class="container"><a class="navbar-brand logo" href="https://github.com/PetarWho">gh/PetarWho</a><button data-bs-toggle="collapse" data-bs-target="#navcol-1" class="navbar-toggler"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                <div class="container"><a class="navbar-brand logo" href="https://github.com/PetarWho">P. Penev</a><button data-bs-toggle="collapse" data-bs-target="#navcol-1" class="navbar-toggler"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item item"><a class="nav-link" href="/">HOME</a></li>
@@ -67,7 +67,7 @@
                                                         <li class="nav-item item"><a class="nav-link" href="stories.html">PRICING</a></li>
                                                         <li class="nav-item item"><a class="nav-link" href="about-me.html">ABOUT</a>
                                                             <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark clean-navbar">
-                                                                <div class="container"><a class="navbar-brand logo" href="https://github.com/PetarWho" target="_blank">github.com/PetarWho</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                                                                <div class="container"><a class="navbar-brand logo" href="https://github.com/PetarWho" target="_blank">P. Penev</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                                                                     <div class="collapse navbar-collapse" id="navcol-1">
                                                                         <ul class="navbar-nav ms-auto">
                                                                             <li class="nav-item item"><a class="nav-link" href="index.html">HOME</a></li>
