--- a/about-me.html
+++ b/about-me.html
@@ -200,7 +200,7 @@
             <li class="list-inline-item" data-bss-hover-animate="pulse" style="color: rgb(255,255,255);"><a href="about-me.html" style="color: rgb(255,255,255);">About</a></li>
             <li class="list-inline-item" data-bss-hover-animate="pulse" style="color: rgb(255,255,255);"><a href="contact-me.html" style="color: rgb(255,255,255);">Contact</a></li>
         </ul>
-        <p class="copyright" style="color: rgb(220,220,220);margin-top: 20px;height: 0px;">Course work for FMI Plovdiv ® 2022</p>
+        <p class="copyright" style="color: rgb(220,220,220);margin-top: 20px;height: 0px;">PetarWho/Portfolio ® 2022<br></p>
     </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
