--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
                     <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item item"><a class="nav-link active" href="/">HOME</a></li>
-                            <li class="nav-item item"><a class="nav-link" href="projects.html">FEATURES</a></li>
-                            <li class="nav-item item"><a class="nav-link" href="stories.html">PRICING</a></li>
+                            <li class="nav-item item"><a class="nav-link" href="projects.html">PROJECTS</a></li>
+                            <li class="nav-item item"><a class="nav-link" href="certificates.html">CERTIFICATES</a></li>
+                            <li class="nav-item item"><a class="nav-link" href="stories.html">STORIES</a></li>
                             <li class="nav-item item"><a class="nav-link" href="about-me.html">ABOUT</a></li>
-                            <li class="nav-item item"><a class="nav-link" href="contact-me.html">CONTACT US</a></li>
+                            <li class="nav-item item"><a class="nav-link" href="contact-me.html">CONTACT ME</a></li>
                         </ul>
                     </div>
                 </div>
@@ -72,6 +73,7 @@
                                                                         <ul class="navbar-nav ms-auto">
                                                                             <li class="nav-item item"><a class="nav-link active" href="index.html">HOME</a></li>
                                                                             <li class="nav-item item"><a class="nav-link" href="projects.html">PROJECTS</a></li>
+                                                                            <li class="nav-item item"><a class="nav-link" href="certificates.html">CERTIFICATES</a></li>
                                                                             <li class="nav-item item"><a class="nav-link" href="stories.html">Stories</a></li>
                                                                             <li class="nav-item item"><a class="nav-link" href="about-me.html">ABOUT</a></li>
                                                                             <li class="nav-item item"><a class="nav-link" href="contact-me.html">CONTACT ME</a></li>
@@ -89,6 +91,7 @@
                                             <ul class="navbar-nav ms-auto">
                                                 <li class="nav-item item"><a class="nav-link active" href="/">HOME</a></li>
                                                 <li class="nav-item item"><a class="nav-link" href="projects.html">FEATURES</a></li>
+                                                <li class="nav-item item"><a class="nav-link" href="certificates.html">CERTIFICATES</a></li>
                                                 <li class="nav-item item"><a class="nav-link" href="stories.html">PRICING</a></li>
                                                 <li class="nav-item item"><a class="nav-link" href="about-me.html">ABOUT</a></li>
                                                 <li class="nav-item item"><a class="nav-link" href="contact-me.html">CONTACT US</a></li>
@@ -99,10 +102,11 @@
                                 <div class="collapse navbar-collapse" id="navcol-1">
                                     <ul class="navbar-nav ms-auto">
                                         <li class="nav-item item"><a class="nav-link active" href="/">HOME</a></li>
-                                        <li class="nav-item item"><a class="nav-link" href="projects.html">FEATURES</a></li>
-                                        <li class="nav-item item"><a class="nav-link" href="stories.html">PRICING</a></li>
+                                        <li class="nav-item item"><a class="nav-link" href="projects.html">PROJECTS</a></li>
+                                        <li class="nav-item item"><a class="nav-link" href="certificates.html">CERTIFICATES</a></li>
+                                        <li class="nav-item item"><a class="nav-link" href="stories.html">STORIES</a></li>
                                         <li class="nav-item item"><a class="nav-link" href="about-me.html">ABOUT</a></li>
-                                        <li class="nav-item item"><a class="nav-link" href="contact-me.html">CONTACT US</a></li>
+                                        <li class="nav-item item"><a class="nav-link" href="contact-me.html">CONTACT ME</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -192,10 +196,11 @@
         </section>
     </main>
     <footer class="footer-basic" style="background: rgb(36,38,39);">
-        <div class="social"><a data-bss-hover-animate="pulse" href="https://www.instagram.com/_iaminig" target="_blank"><i class="icon ion-social-instagram" style="color: rgb(255,255,255);"></i></a><a data-bss-hover-animate="pulse" href="https://www.facebook.com/petar.todorov.3538" style="color: rgb(255,255,255);" target="_blank"><i class="icon ion-social-facebook" style="color: rgb(255,255,255);"></i></a><a data-bss-hover-animate="pulse" href="https://www.linkedin.com/in/petar-penev-9557b724b/" style="color: rgb(255,255,255);"><i class="icon ion-social-linkedin" style="color: rgb(255,255,255);"></i></a><a data-bss-hover-animate="pulse" href="https://github.com/PetarWho" style="color: rgb(255,255,255);"><i class="icon ion-social-github" style="color: rgb(255,255,255);"></i></a></div>
+        <div class="social"><a data-bss-hover-animate="pulse" href="https://www.instagram.com/adrenalyne" target="_blank"><i class="icon ion-social-instagram" style="color: rgb(255,255,255);"></i></a><a data-bss-hover-animate="pulse" href="https://www.facebook.com/petar.todorov.3538" style="color: rgb(255,255,255);" target="_blank"><i class="icon ion-social-facebook" style="color: rgb(255,255,255);"></i></a><a data-bss-hover-animate="pulse" href="https://www.linkedin.com/in/petar-penev-9557b724b/" style="color: rgb(255,255,255);"><i class="icon ion-social-linkedin" style="color: rgb(255,255,255);"></i></a><a data-bss-hover-animate="pulse" href="https://github.com/PetarWho" style="color: rgb(255,255,255);"><i class="icon ion-social-github" style="color: rgb(255,255,255);"></i></a></div>
         <ul class="list-inline">
             <li class="list-inline-item" data-bss-hover-animate="pulse"><a href="index.html" style="color: rgb(255,255,255);">Home</a></li>
             <li class="list-inline-item" data-bss-hover-animate="pulse" style="color: rgb(255,255,255);"><a href="projects.html" style="color: rgb(255,255,255);">Projects</a></li>
+            <li class="list-inline-item" data-bss-hover-animate="pulse" style="color: rgb(255,255,255);"><a href="certificates.html" style="color: rgb(255,255,255);">Certificates</a></li>
             <li class="list-inline-item" data-bss-hover-animate="pulse" style="color: rgb(255,255,255);"><a href="stories.html" style="color: rgb(255,255,255);">Stories</a></li>
             <li class="list-inline-item" data-bss-hover-animate="pulse" style="color: rgb(255,255,255);"><a href="about-me.html" style="color: rgb(255,255,255);">About</a></li>
             <li class="list-inline-item" data-bss-hover-animate="pulse" style="color: rgb(255,255,255);"><a href="contact-me.html" style="color: rgb(255,255,255);">Contact</a></li>
