--- a/certificates.html
+++ b/certificates.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Projects - PetarWho</title>
-    <meta name="description" content="Here are most of my projects, that can probably be found on Github. ">
+    <title>Certificates - PetarWho</title>
+    <meta name="description" content="Here are most of my accomplishments. ">
     <meta name="author" content="PetarWho">
-    <meta name="keywords" content="PetarWho, projects, angular, js, ts, unity, c#">
+    <meta name="keywords" content="PetarWho, certificates, angular, js, ts, unity, c#">
     <link rel="icon" type="image/jpeg" sizes="2757x1835" href="assets/img/pw.jpg">
     <link rel="icon" type="image/jpeg" sizes="2757x1835" href="assets/img/pw.jpg">
     <link rel="icon" type="image/jpeg" sizes="2757x1835" href="assets/img/pw.jpg">
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
     <link rel="stylesheet" href="assets/css/vanilla-zoom.min.css">
+    <link rel="stylesheet" href="assets/css/certificates.css">
 </head>
 
 <body>
@@ -40,8 +41,8 @@
                     <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item item"><a class="nav-link" href="/">HOME</a></li>
-                            <li class="nav-item item"><a class="nav-link active" href="projects.html">PROJECTS</a></li>
-                            <li class="nav-item item"><a class="nav-link" href="certificates.html">CERTIFICATES</a></li>
+                            <li class="nav-item item"><a class="nav-link" href="projects.html">PROJECTS</a></li>
+                            <li class="nav-item item"><a class="nav-link active" href="certificates.html">CERTIFICATES</a></li>
                             <li class="nav-item item"><a class="nav-link" href="stories.html">STORIES</a></li>
                             <li class="nav-item item"><a class="nav-link" href="about-me.html">ABOUT</a></li>
                             <li class="nav-item item"><a class="nav-link" href="contact-me.html">CONTACT ME</a></li>
@@ -74,8 +75,8 @@
                                                                     <div class="collapse navbar-collapse" id="navcol-1">
                                                                         <ul class="navbar-nav ms-auto">
                                                                             <li class="nav-item item"><a class="nav-link" href="index.html">HOME</a></li>
-                                                                            <li class="nav-item item"><a class="nav-link active" href="projects.html">PROJECTS</a></li>
-                                                                            <li class="nav-item item"><a class="nav-link" href="certificates.html">CERTIFICATES</a></li>
+                                                                            <li class="nav-item item"><a class="nav-link" href="projects.html">PROJECTS</a></li>
+                                                                            <li class="nav-item item"><a class="nav-link active" href="certificates.html">CERTIFICATES</a></li>
                                                                             <li class="nav-item item"><a class="nav-link" href="stories.html">STORIES</a></li>
                                                                             <li class="nav-item item"><a class="nav-link" href="about-me.html">ABOUT</a></li>
                                                                             <li class="nav-item item"><a class="nav-link" href="contact-me.html">CONTACT ME</a></li>
@@ -92,8 +93,8 @@
                                         <div class="collapse navbar-collapse" id="navcol-1">
                                             <ul class="navbar-nav ms-auto">
                                                 <li class="nav-item item"><a class="nav-link" href="/">HOME</a></li>
-                                                <li class="nav-item item"><a class="nav-link active" href="projects.html">PROJECTS</a></li>
-                                                <li class="nav-item item"><a class="nav-link" href="certificates.html">CERTIFICATES</a></li>
+                                                <li class="nav-item item"><a class="nav-link" href="projects.html">PROJECTS</a></li>
+                                                <li class="nav-item item"><a class="nav-link active" href="certificates.html">CERTIFICATES</a></li>
                                                 <li class="nav-item item"><a class="nav-link" href="stories.html">STORIES</a></li>
                                                 <li class="nav-item item"><a class="nav-link" href="about-me.html">ABOUT</a></li>
                                                 <li class="nav-item item"><a class="nav-link" href="contact-me.html">CONTACT ME</a></li>
@@ -104,8 +105,8 @@
                                 <div class="collapse navbar-collapse" id="navcol-1">
                                     <ul class="navbar-nav ms-auto">
                                         <li class="nav-item item"><a class="nav-link" href="/">HOME</a></li>
-                                        <li class="nav-item item"><a class="nav-link active" href="projects.html">PROJECTS</a></li>
-                                        <li class="nav-item item"><a class="nav-link" href="certificates.html">CERTIFICATES</a></li>
+                                        <li class="nav-item item"><a class="nav-link" href="projects.html">PROJECTS</a></li>
+                                        <li class="nav-item item"><a class="nav-link active" href="certificates.html">CERTIFICATES</a></li>
                                         <li class="nav-item item"><a class="nav-link" href="stories.html">STORIES</a></li>
                                         <li class="nav-item item"><a class="nav-link" href="about-me.html">ABOUT</a></li>
                                         <li class="nav-item item"><a class="nav-link" href="contact-me.html">CONTACT ME</a></li>
@@ -123,47 +124,79 @@
         <section class="features-blue">
             <div class="container">
                 <div class="intro">
-                    <h2 class="text-center">Projects</h2>
-                    <p class="text-center">If you want to participate in mine or invite me in other projects, please contact me.</p>
+                    <h2 class="text-center">Certificates</h2>
+                    <p class="text-center">These are my hard-earned certificates obtained throughout my career.</p>
                 </div>
-                <div class="row features">
-                    <div class="col-sm-6 col-md-4 item"><i class="icon ion-ios-game-controller-b icon"></i>
-                        <h3 class="name">Dungeon Runner</h3>
-                        <p class="description">A simple game made on Unity back when my coding journey was starting. You had 4 different weapons that you have to find throughout several dungeons, as you had to kill every single enemy or boss to complete the level. It was meant for speedruns. Sadly it's all gone since I did not use Github back then.</p>
+                <div class="cert-box">
+                    <div class="row">
+                      <div class="col-md-3">
+                        <div class="card mb-4">
+                          <img class="card-img-top certificate" src="./assets/img/certificates/sdiploma1.jpg" alt="C# Web Diploma">
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="card mb-4">
+                          <img class="card-img-top certificate" src="./assets/img/certificates/s8.jpg" alt="certificate">
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="card mb-4">
+                          <img class="card-img-top certificate" src="./assets/img/certificates/s7.jpg" alt="certificate">
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="card mb-4">
+                          <img class="card-img-top certificate" src="./assets/img/certificates/s12.jpg" alt="certificate">
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="card mb-4">
+                          <img class="card-img-top certificate" src="./assets/img/certificates/s11.jpg" alt="certificate">
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="card mb-4">
+                          <img class="card-img-top certificate" src="./assets/img/certificates/s10.jpg" alt="certificate">
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="card mb-4">
+                          <img class="card-img-top certificate" src="./assets/img/certificates/s9.jpg" alt="certificate">
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="card mb-4">
+                          <img class="card-img-top certificate" src="./assets/img/certificates/s6.jpg" alt="certificate">
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="card mb-4">
+                          <img class="card-img-top certificate" src="./assets/img/certificates/s5.jpg" alt="certificate">
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="card mb-4">
+                          <img class="card-img-top certificate" src="./assets/img/certificates/s4.jpg" alt="certificate">
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="card mb-4">
+                          <img class="card-img-top certificate" src="./assets/img/certificates/s3.jpg" alt="certificate">
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="card mb-4">
+                          <img class="card-img-top certificate" src="./assets/img/certificates/s2.jpg" alt="certificate">
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="card mb-4">
+                          <img class="card-img-top certificate" src="./assets/img/certificates/s1.jpg" alt="certificate">
+                        </div>
+                      </div>
                     </div>
-                    <div class="col-sm-6 col-md-4 item"><i class="icon ion-ios-game-controller-b icon"></i>
-                        <h3 class="name">Milk Clicker Universe</h3>
-                        <p class="description">A clicker game that I was planning to finish and release on App Stores since it was meant to be a mobile game. I got tons of ideas for this game and raised my goals, which lead to demotivation. So all the ideas can still be found on DevOps and the project is currently "frozen" and kept as private on Github.</p>
-                    </div>
-                    <div class="col-sm-6 col-md-4 item"><i class="icon ion-ios-game-controller-b icon"></i>
-                        <h3 class="name">SpeedTyper</h3>
-                        <p class="description">Word falling type of game, where you have to type every single word that falls, as it penalizes for each mistake. It has 4 main difficulties and other modes to play as well. Collect coins and trophies and improve your typing speed in a fun to play way. I was planning to release it this year on Steam.&nbsp;</p>
-                    </div>
-                    <div class="col-sm-6 col-md-4 item"><i class="far fa-object-group icon"></i>
-                        <h3 class="name">LeagueChamps</h3>
-                        <p class="description">App made on C# using Windows Forms. Took me 2 hours to make and I use it to get the count of my unowned champions and the total amount of BE that I will need to buy them all. The only down side is that you have to enter all the info. But I plan on reworking it with Riot's API. Can be found on Github.</p>
-                    </div>
-                    <div class="col-sm-6 col-md-4 item"><i class="fas fa-file-code icon"></i>
-                        <h3 class="name">OddsCalculator</h3>
-                        <p class="description">I liked playing around on different CS:GO gambling sites, so I decided to make an odds calculator to find out the most profitable boxes. Of course it works with everything not just CS:GO sites. You can copy ton of percentages and paste them. It is hosted using Github Pages.</p>
-                    </div>
-                    <div class="col-sm-6 col-md-4 item"><i class="fa fa-plane icon"></i>
-                        <h3 class="name">TapVacation (internship)</h3>
-                        <p class="description">With team of 8 people split to&nbsp; Backend and Frontend teams. We made an Angular app for employers and employees to use for sending requests for absence to their employers as they have to explain the reason and the period of their desired absence. The employer can approve or reject their request.</p>
-                    </div>
-                    <div class="col-sm-6 col-md-4 item"><i class="fas fa-user-secret icon"></i>
-                        <h3 class="name">Play it Wright</h3>
-                        <p class="description">An automated way to claim the free game from Epic Games each week. It's written using Playwright - an end-to-end testing package that allows automation of every action that can be done to a website. And I use it to login and claim free games each week with 100 accounts. The only obstacle is Captcha..</p>
-                    </div>
-                    <div class="col-sm-6 col-md-4 item"><i class="fas fa-cube icon"></i>
-                        <h3 class="name">Blender Projects</h3>
-                        <p class="description">From cubes to bottles to cars to racetracks. Blender is my favorite 3d modeling software. I've made couple of models there and I can't say I'm an expert. More like beginner\intermediate. As it is so hard to master. I praise all the people that have mastered it. They are pure legends. &lt;3</p>
-                    </div>
-                    <div class="col-sm-6 col-md-4 item"><i class="fab fa-wpforms icon"></i>
-                        <h3 class="name">FileRevamp</h3>
-                        <p class="description">FileRevamp is a simple app built in Windows Forms, that provides an easy way to manipulate file settings, such as name, extension, creation date, etc. Accepts all file types (images, text, video, audio) It works with single file or many files at once.&nbsp; Download link can be found on my Github.</p>
-                    </div>
-                </div>
+                  </div>
+                  
             </div>
         </section>
     </main>
