--- a/projects.html
+++ b/projects.html
@@ -127,9 +127,13 @@
                     <p class="text-center">Feel free to reach out to me if you are interested in collaborating on my projects or if you would like to invite me to join your own projects. I am open to opportunities and would be delighted to discuss potential partnerships. Please don't hesitate to contact me.</p>
                 </div>
                 <div class="row features">
-                    <div class="col-sm-6 col-md-4 item"><i class="icon ion-ios-game-controller-b icon"></i>
+                    <div class="col-sm-6 col-md-4 item"><i class="fa fa-cubes" aria-hidden="true"></i></i>
                         <h3 class="name">Duplex.gg</h3>
                         <p class="description">I have developed an ASP.NET Core Web Application that integrates Riot's API, Google Drive API, EF Core, and MS SQL. This application serves the purpose of facilitating participation in events organized by the app's administrator. In these events, users are required to complete specific tasks in the game League of Legends. Once a task is completed, users share their game ID with the app, which then queries Riot's API to verify the task completion. Successful completion results in the doubling of entry coins spent to participate in the challenge. These coins can be used to acquire various rewards available within the app. Additionally, the application provides daily free rewards to users based on their rank within the app.</p>
+                    </div>
+                    <div class="col-sm-6 col-md-4 item"><i class="fa fa-plane icon"></i>
+                        <h3 class="name">TapVacation (internship)</h3>
+                        <p class="description">With team of 8 people split to&nbsp; Backend and Frontend teams. We made an Angular app for employers and employees to use for sending requests for absence to their employers as they have to explain the reason and the period of their desired absence. The employer can approve or reject their request.</p>
                     </div>
                     <div class="col-sm-6 col-md-4 item"><i class="icon ion-ios-game-controller-b icon"></i>
                         <h3 class="name">Dungeon Runner</h3>
@@ -146,10 +150,6 @@
                     <div class="col-sm-6 col-md-4 item"><i class="far fa-object-group icon"></i>
                         <h3 class="name">LeagueChamps</h3>
                         <p class="description">I developed a Windows Forms application using C# that serves as a tool to track my unowned champions in a specific game. With this app, I can quickly determine the total number of champions I don't possess and calculate the amount of in-game currency (BE) required to acquire them all. The only drawback is that I need to manually enter the relevant information. However, I have plans to enhance the application by integrating it with Riot's API, allowing for automated retrieval of champion data. You can find the current version of the application on my GitHub repository.</p>
-                    </div>
-                    <div class="col-sm-6 col-md-4 item"><i class="fa fa-plane icon"></i>
-                        <h3 class="name">TapVacation (internship)</h3>
-                        <p class="description">With team of 8 people split to&nbsp; Backend and Frontend teams. We made an Angular app for employers and employees to use for sending requests for absence to their employers as they have to explain the reason and the period of their desired absence. The employer can approve or reject their request.</p>
                     </div>
                     <div class="col-sm-6 col-md-4 item"><i class="fas fa-user-secret icon"></i>
                         <h3 class="name">Play it Wright</h3>
