--- a/projects.html
+++ b/projects.html
@@ -127,7 +127,7 @@
                     <p class="text-center">Feel free to reach out to me if you are interested in collaborating on my projects or if you would like to invite me to join your own projects. I am open to opportunities and would be delighted to discuss potential partnerships. Please don't hesitate to contact me.</p>
                 </div>
                 <div class="row features">
-                    <div class="col-sm-6 col-md-4 item"><i class="fa fa-cubes" aria-hidden="true"></i></i>
+                    <div class="col-sm-6 col-md-4 item"><i class="fa fa-cubes icon"></i></i>
                         <h3 class="name">Duplex.gg</h3>
                         <p class="description">I have developed an ASP.NET Core Web Application that integrates Riot's API, Google Drive API, EF Core, and MS SQL. This application serves the purpose of facilitating participation in events organized by the app's administrator. In these events, users are required to complete specific tasks in the game League of Legends. Once a task is completed, users share their game ID with the app, which then queries Riot's API to verify the task completion. Successful completion results in the doubling of entry coins spent to participate in the challenge. These coins can be used to acquire various rewards available within the app. Additionally, the application provides daily free rewards to users based on their rank within the app.</p>
                     </div>
