--- a/projects.html
+++ b/projects.html
@@ -133,7 +133,7 @@
                     </div>
                     <div class="col-sm-6 col-md-4 item"><i class="fa fa-plane icon"></i>
                         <h3 class="name">TapVacation (internship)</h3>
-                        <p class="description">With team of 8 people split to&nbsp; Backend and Frontend teams. We made an Angular app for employers and employees to use for sending requests for absence to their employers as they have to explain the reason and the period of their desired absence. The employer can approve or reject their request.</p>
+                        <p class="description">Our team, consisting of eight individuals, was divided into specialized Backend and Frontend teams. Together, we developed a robust Angular application tailored for both employers and employees. This app facilitates the seamless submission of absence requests, requiring employees to provide detailed explanations and specify the desired duration of their absence. Employers, on the other hand, can efficiently review these requests and make informed decisions by either approving or rejecting them.</p>
                     </div>
                     <div class="col-sm-6 col-md-4 item"><i class="icon ion-ios-game-controller-b icon"></i>
                         <h3 class="name">Dungeon Runner</h3>
