--- a/certificates.html
+++ b/certificates.html
@@ -146,6 +146,16 @@
                       </div>
                       <div class="col-md-3">
                         <div class="card mb-4">
+                          <img class="card-img-top certificate" src="./assets/img/certificates/do2.jpeg" alt="certificate">
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="card mb-4">
+                          <img class="card-img-top certificate" src="./assets/img/certificates/do1.jpg" alt="certificate">
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="card mb-4">
                           <img class="card-img-top certificate" src="./assets/img/certificates/s12.jpg" alt="certificate">
                         </div>
                       </div>
