--- a/certificates.html
+++ b/certificates.html
@@ -141,7 +141,17 @@
                       </div>
                       <div class="col-md-3">
                         <div class="card mb-4">
+                          <img class="card-img-top certificate" src="./assets/img/certificates/PW2.jpg" alt="certificate">
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="card mb-4">
                           <img class="card-img-top certificate" src="./assets/img/certificates/s7.jpg" alt="certificate">
+                        </div>
+                      </div>
+                        <div class="col-md-3">
+                        <div class="card mb-4">
+                          <img class="card-img-top certificate" src="./assets/img/certificates/PW1.jpg" alt="certificate">
                         </div>
                       </div>
                       <div class="col-md-3">
