--- a/certificates.html
+++ b/certificates.html
@@ -141,7 +141,7 @@
                       </div>
                       <div class="col-md-3">
                         <div class="card mb-4">
-                          <img class="card-img-top certificate" src="./assets/img/certificates/PW2.jpg" alt="certificate">
+                          <img class="card-img-top certificate" src="./assets/img/certificates/PW2.jpeg" alt="certificate">
                         </div>
                       </div>
                       <div class="col-md-3">
@@ -151,7 +151,7 @@
                       </div>
                         <div class="col-md-3">
                         <div class="card mb-4">
-                          <img class="card-img-top certificate" src="./assets/img/certificates/PW1.jpg" alt="certificate">
+                          <img class="card-img-top certificate" src="./assets/img/certificates/PW1.jpeg" alt="certificate">
                         </div>
                       </div>
                       <div class="col-md-3">
