certificates and projects

--- a/certificates.html
+++ b/certificates.html
@@ -131,7 +131,22 @@
                     <div class="row">
                       <div class="col-md-3">
                         <div class="card mb-4">
+                          <img class="card-img-top certificate" src="./assets/img/certificates/fullcs.jpg" alt="C# Full Stack Diploma">
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="card mb-4">
+                          <img class="card-img-top certificate" src="./assets/img/certificates/fullpython.jpg" alt="Python Full Stack Diploma">
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="card mb-4">
                           <img class="card-img-top certificate" src="./assets/img/certificates/sdiploma1.jpg" alt="C# Web Diploma">
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="card mb-4">
+                          <img class="card-img-top certificate" src="./assets/img/certificates/pdiploma.jpg" alt="Python Web Diploma">
                         </div>
                       </div>
                       <div class="col-md-3">
