--- a/projects.html
+++ b/projects.html
@@ -127,13 +127,21 @@
                     <p class="text-center">Feel free to reach out to me if you are interested in collaborating on my projects or if you would like to invite me to join your own projects. I am open to opportunities and would be delighted to discuss potential partnerships. Please don't hesitate to contact me.</p>
                 </div>
                 <div class="row features">
+                    <div class="col-sm-6 col-md-4 item"><i class="fa fa-calendar-check-o icon"></i></i>
+                        <h3 class="name">Task.Do (Diadraw Internship)</h3>
+                        <p class="description">This project was about task management of employees. Tasks assigned by managers to employees. Using React as Frontend and ASP.NET Core Web API, we've built a fully functional app covering all the requirements and even optional additions. I was the one responsible with the whole Backend, as well as playing a significant role in the Frontend. The repository to this project is in my Github, as I was the leader of my team, managing and assigning their tasks and approving pull requests. That internship and the project itself taught me a lot about JSON Web Tokens, React and boosted my knowledge in ASP.NET Core APIs.</p>
+                    </div>
+                    <div class="col-sm-6 col-md-4 item"><i class="fa fa-plane icon"></i>
+                        <h3 class="name">TapVacation (Zingasoft Internship)</h3>
+                        <p class="description">Our team, consisting of eight individuals, was divided into specialized Backend and Frontend teams. Together, we developed a robust Angular application tailored for both employers and employees. This app facilitates the seamless submission of absence requests, requiring employees to provide detailed explanations and specify the desired duration of their absence. Employers, on the other hand, can efficiently review these requests and make informed decisions by either approving or rejecting them.</p>
+                    </div>
                     <div class="col-sm-6 col-md-4 item"><i class="fa fa-cubes icon"></i></i>
                         <h3 class="name">Duplex.gg</h3>
                         <p class="description">I have developed an ASP.NET Core Web Application that integrates Riot's API, Google Drive API, EF Core, and MS SQL. This application serves the purpose of facilitating participation in events organized by the app's administrator. In these events, users are required to complete specific tasks in the game League of Legends. Once a task is completed, users share their game ID with the app, which then queries Riot's API to verify the task completion. Successful completion results in the doubling of entry coins spent to participate in the challenge. These coins can be used to acquire various rewards available within the app. Additionally, the application provides daily free rewards to users based on their rank within the app.</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 item"><i class="fa fa-plane icon"></i>
-                        <h3 class="name">TapVacation (internship)</h3>
-                        <p class="description">Our team, consisting of eight individuals, was divided into specialized Backend and Frontend teams. Together, we developed a robust Angular application tailored for both employers and employees. This app facilitates the seamless submission of absence requests, requiring employees to provide detailed explanations and specify the desired duration of their absence. Employers, on the other hand, can efficiently review these requests and make informed decisions by either approving or rejecting them.</p>
+                    <div class="col-sm-6 col-md-4 item"><i class="fa fa-check-circle-o icon"></i>
+                        <h3 class="name">Quizy</h3>
+                        <p class="description">I have developed a Django Web Application using PostgreSQL as database. It was my final project before graduating as Python Web Developer at SoftUni. The project itself is about quizzes and trivial questions, with admins and users and rewards for completiign quizzes. Admins can create new quizzes in given categories like Math, Physics, History, Gaming, etc. The users can complete quizzes, earning points upon successful completion, which points then can be spent on the rewards page. Admins can create rewards and put a price to them and users can use their virtual balance to redeem a reward.</p>
                     </div>
                     <div class="col-sm-6 col-md-4 item"><i class="icon ion-ios-game-controller-b icon"></i>
                         <h3 class="name">Dungeon Runner</h3>
