Fix router issue

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Peter Penev - Full-Stack Developer Portfolio. Certified in C# and Python with expertise in web development, DevOps, and software engineering." />
     <meta name="keywords" content="Full-Stack Developer, Software Engineer, Web Development, React, TypeScript, C#, Python, Portfolio" />
