--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Peter Penev - Full-Stack Developer Portfolio. Certified in C# and Python with expertise in web development, DevOps, and software engineering." />
+    <meta name="description" content="Petar Penev - Full-Stack Developer Portfolio. Certified in C# and Python with expertise in web development, DevOps, and software engineering." />
     <meta name="keywords" content="Full-Stack Developer, Software Engineer, Web Development, React, TypeScript, C#, Python, Portfolio" />
-    <meta name="author" content="Peter Penev" />
-    <title>Peter Penev | Full-Stack Developer</title>
+    <meta name="author" content="Petar Penev" />
+    <title>Petar Penev | Full-Stack Developer</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
